# SecretScraper

./: .gitignore  .pre-commit-config.yaml  DevelopJournal.md  LICENSE  README.md  pyproject.toml  requirements.txt  settings.yml  tox.ini
.github/workflows/: main.yml
docs/: development.md  publish.md
src/secretscraper/: __init__.py  cmdline.py  coroutinue.py  crawler.py  entity.py  exception.py  facade.py  filter.py  handler.py  log.py  output_formatter.py  rate_limiter.py  scanner.py  url_filter.py  urlparser.py  util.py
src/secretscraper/config/: __init__.py  settings.yml
swarm/: __init__.py  swarm_coordinator.py  swarm_crawler.py  swarm_lexicon.py  swarm_singularity.py  swarm_vector.py  swarm_wormhole.py
tests/: __init__.py  benchmark_handler.py  conftest.py  settings.yml  test_cmdline.py  test_coroutinue.py  test_crawler.py  test_crawler_regressions.py  test_entity.py  test_facade.py  test_filter.py  test_handler.py  test_log.py  test_output_formatter_regressions.py  test_rate_limiter.py  test_url_filter.py  test_urlparser.py  test_util.py  test_version.py
tests/local_tests/: __init__.py  local_test_crawler.py  local_test_facade.py  settings.yml  urls.txt
tests/resources/: HackerNews.html  Rules.yml  source_text.txt
tests/resources/HackerNews_files/: hn.js  news.css
tests/resources/local_server/: 1.js  delete1  index.html  secrets.txt
