[tool.poetry]
name = "secretscraper"
version = "1.3.5.21"
description = "SecretScraper is a web scraper tool that can scrape the content through target websites and extract secret information via regular expression."
readme = "README.md"
authors = ["Padishah <straystrayer@gmail.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
dynaconf = "^3.1.12"
click = "^8.1.3"
hyperscan = [
    { version = "^0.7.7", platform = "darwin" },
    { version = "^0.7.7", platform = "linux" }
]
bs4 = "^0.0.2"
aiohttp = "^3.9.4"
httpx = {extras = ["socks"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.23.6"
pytest-benchmark = "^4.0.0"
pytest-cov = "^5.0.0"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"

[tool.poetry.scripts]
secretscraper = "secretscraper.cmdline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--durations=10 " #--full-trace --cov-report html --cov=src
junit_duration_report = "total"
filterwarnings = [
    "ignore"
]

[tool.pylint.design]
max-line-length = 120
