[project]
name = "secretscraper"
version = "1.4.2"
description = "SecretScraper is a web scraper tool that can scrape the content through target websites and extract secret information via regular expression."
authors = [{ name = "Padishah", email = "straystrayer@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "dynaconf>=3.1.12,<4.0.0",
    "click>=8.1.3,<9.0.0",
    'hyperscan>=0.7.0,<0.8.0; platform_system == "Darwin" and python_version == "3.10"',
    'hyperscan>=0.7.7,<0.8.0; platform_system == "Darwin" and python_version == "3.11"',
    'hyperscan>=0.7.0,<0.8.0; platform_system == "Linux" and python_version == "3.10"',
    'hyperscan>=0.7.7,<0.8.0; platform_system == "Linux" and python_version == "3.11"',
    "bs4>=0.0.2,<0.0.3",
    "aiohttp>=3.9.4,<4.0.0",
    "httpx[socks]>=0.27.0,<0.28.0",
    "tldextract>=5.1.2,<6.0.0",
    "aiocache>=0.12.2,<0.13.0",
]

[project.scripts]
secretscraper = "secretscraper.cmdline:main"

[dependency-groups]
dev = [
    "pylint>=2.17.4,<3.0.0",
    "isort>=5.12.0,<6.0.0",
    "pytest>=7.3.1,<8.0.0",
    "pytest-asyncio>=0.23.6,<0.24.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "tox>=4.5.2,<5.0.0",
    "tox-gh-actions>=3.2.0,<4.0.0",
    "mkdocs>=1.4.3,<2.0.0",
    "mkdocs-material>=8.5.11,<9.0.0",
    "pytest-pylint>=0.19.0,<0.20.0",
    "pre-commit>=3.3.2,<4.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secretscraper"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"
log_cli = true
log_cli_level = "ERROR"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--durations=10 " #--full-trace --cov-report html --cov=src
junit_duration_report = "total"
filterwarnings = [
    "ignore"
]

[tool.pylint.design]
max-line-length = 120
